--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@strapi/provider-upload-cloudinary": "^5.0.2",
+    "axios": "^1.7.7",
+    "lucide-react": "^0.447.0",
+    "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.14"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/react": "18.3.11",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
