--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.7.1",
     "@strapi/provider-upload-cloudinary": "^5.0.2",
     "axios": "^1.7.7",
     "lucide-react": "^0.447.0",
