--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.7.1",
+    "@react-email/components": "0.0.25",
     "@strapi/provider-upload-cloudinary": "^5.0.2",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.7.0",
     "axios": "^1.7.7",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "resend": "^4.0.0",
+    "stripe": "13.2.0"
   },
   "devDependencies": {
     "@types/react": "18.3.11",
     "postcss": "^8",
+    "react-email": "3.0.1",
     "tailwindcss": "^3.4.1"
   }
 }
